--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ footer p, footer a, footer a:visited {
 	text-align: left;
 }
 
+.footer-kontakty {
+	text-align: right;
+}
+
 .footer-stranky a {
 	display: block;
 }
